--- a/pkg/auth/web/templates/error.tmpl.html
+++ b/pkg/auth/web/templates/error.tmpl.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>TKEStack - Select login method</title>
+    <title>{%.Title%}  - Error</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/oidc/static/style.css" rel="stylesheet" data-role="global">
     <link rel="apple-touch-icon" sizes="57x57" href="/oidc/static/apple-icon-57x57.png">
@@ -29,7 +29,7 @@
 <div class="clg-head">
     <div class="clg-head-inner">
         <div class="clg-logo ">
-            <a href="/">TKEStack</a>
+            <a href="/">{%.Title%} </a>
         </div>
     </div>
 </div>
@@ -38,34 +38,9 @@
         <div class="clg-wrap-con clg-onpage" id="loginBox">
             <div class="clg-mod J-commonLoginContent ">
                 <div class="clg-mod-tab J-loginContentBox J-qcloginBox">
-                    <div class="clg-mod-tit J-txtLoginTitle">登录</div>
-                </div>
-                <div class="clg-other-mod J-otherMod">
-                    <div class="clg-other-tit J-switchLoginTypeArea">
-                        <span>其他登录方式</span>
-                    </div>
-                    <div class="clg-other-con J-switchLoginTypeArea">
-                        {{ range $i := .IdentityProviders }}
-                            <div class="clg-other-link">
-                                <a title="{{ $i.Name }}"
-                                   class="J-btnSwitchLoginType" target="_self"
-                                   href="{{ $i.URL }}">
-                                    <span>{{ $i.Name }}</span>
-                                </a>
-                            </div>
-                        {{ end }}
-                    </div>
-                </div>
-            </div>
-            <div class="clg-wrap-aside">
-                <div class="clg-wrap-aside-inner">
-                    <div class="clg-wrap-aside-tit">TKEStack</div>
-                    <div class="clg-wrap-aside-list">
-                        <ul>
-                            <li><span>Container management platform</span></li>
-                        </ul>
-                    </div>
-                    <div class="clg-wrap-aside-btn"></div>
+                    <div class="clg-mod-tit J-txtLoginTitle">{{ .ErrType }}</div>
+                    <div class="clg-form-tips error J-loginTip"
+                         id="check-error">{{ .ErrMsg }}</div>
                 </div>
             </div>
         </div>
