--- a/pkg/auth/web/templates/login.tmpl.html
+++ b/pkg/auth/web/templates/login.tmpl.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>TKEStack - Error</title>
+    <title>{%.Title%} - Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/oidc/static/style.css" rel="stylesheet" data-role="global">
     <link rel="apple-touch-icon" sizes="57x57" href="/oidc/static/apple-icon-57x57.png">
@@ -29,7 +29,7 @@
 <div class="clg-head">
     <div class="clg-head-inner">
         <div class="clg-logo ">
-            <a href="/">TKEStack</a>
+            <a href="/">{%.Title%} </a>
         </div>
     </div>
 </div>
@@ -37,10 +37,32 @@
     <div class="clg-wrap-inner">
         <div class="clg-wrap-con clg-onpage" id="loginBox">
             <div class="clg-mod J-commonLoginContent ">
-                <div class="clg-mod-tab J-loginContentBox J-qcloginBox">
-                    <div class="clg-mod-tit J-txtLoginTitle">{{ .ErrType }}</div>
-                    <div class="clg-form-tips error J-loginTip"
-                         id="check-error">{{ .ErrMsg }}</div>
+                <ul class="clg-form-list">
+                    {{ range $c := .Connectors }}
+                    <li>
+                        <div class="clg-form-unit">
+                            <div class="clg-form-btn">
+                                <a href="{{ $c.URL }}" target="_self">
+                                    <button class="clg-btn J-loginBtn">
+                                        Tenant {{ $c.ID }}
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <br/>
+                    {{ end }}
+                </ul>
+            </div>
+            <div class="clg-wrap-aside">
+                <div class="clg-wrap-aside-inner">
+                    <div class="clg-wrap-aside-tit">{%.Title%} </div>
+                    <div class="clg-wrap-aside-list">
+                        <ul>
+                            <li><span>Please select tenant</span></li>
+                        </ul>
+                    </div>
+                    <div class="clg-wrap-aside-btn"></div>
                 </div>
             </div>
         </div>
