--- a/pkg/auth/web/templates/error.tmpl.html
+++ b/pkg/auth/web/templates/error.tmpl.html
@@ -7,22 +7,9 @@
     <title>{%.Title%} - Error</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/oidc/static/style.css" rel="stylesheet" data-role="global">
-    <link rel="apple-touch-icon" sizes="57x57" href="/oidc/static/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/oidc/static/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/oidc/static/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/oidc/static/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/oidc/static/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/oidc/static/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/oidc/static/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/oidc/static/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/oidc/static/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/oidc/static/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/oidc/static/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/oidc/static/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/oidc/static/favicon-16x16.png">
+    <link rel="icon" type="image/svg" href="/oidc/static/{%.LogoDir%}/favicon.svg">
     <link rel="manifest" href="/oidc/static/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/oidc/static/ms-icon-144x144.png">
     <meta name="theme-color" content="#262626">
 </head>
 
